task7/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: myapp
  name: service-react
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: myapp
status:
  loadBalancer: {}
