task7/myingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task7-ingress
  namespace: p-xurshid
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - xnamozov.nvrbckdown.uz
    secretName: task6-tls
  rules:
  - host: xnamozov.nvrbckdown.uz  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-react
            port:
              number: 80
status:
  loadBalancer: {}
